test: 테스트 픽스처, Array.asList 에서 List.of 로 변경